netbox-docker2/deployment/nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.service.expose: htsaks1.eastus.cloudapp.azure.com
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 2
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: nginx
    spec:
      containers:
      - args:
        - nginx
        - -c
        - /etc/netbox-nginx/nginx.conf
        image: nginx:1.15-alpine
        name: nginx
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /opt/netbox/netbox/static
          name: netbox-static-files
          readOnly: true
        - mountPath: /etc/netbox-nginx/
          name: netbox-nginx-config
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: netbox-static-files
        persistentVolumeClaim:
          claimName: netbox-static-files
          readOnly: true
      - name: netbox-nginx-config
        persistentVolumeClaim:
          claimName: netbox-nginx-config
          readOnly: true
status: {}
