netbox-docker2/deployment/redis-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.service.type: NodePort
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 2
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: redis
    spec:
      containers:
      - args:
        - sh
        - -c
        - redis-server --appendonly yes --requirepass $REDIS_PASSWORD
        image: redis:4-alpine
        name: redis
        ports:
        - containerPort: 6379
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: netbox-redis-data
      restartPolicy: Always
      volumes:
      - name: netbox-redis-data
        persistentVolumeClaim:
          claimName: netbox-redis-data
status: {}
