netbox-docker2/deployment/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  rules:
  - host: htsaks1.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 8080
status:
  loadBalancer: {}
